# futaba-search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docker.yml
src/futaba_search/: __init__.py  bot.py  config.py  database.py  logging_config.py  main.py  monitor.py  utils.py
tests/: test_database.py  test_utils.py
