[tool.poetry]
name = "futaba-search"
version = "0.1.0"
description = "Discord bot for searching Futaba channel threads"
authors = ["tropical-362827 <wired.wireless0@gmail.com>"]
readme = "README.md"
packages = [{include = "futaba_search", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.3.0"
aiohttp = "^3.8.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.1.0"
mypy = "^1.0.0"
safety = "^2.3.0"
bandit = "^1.7.0"

[tool.poetry.scripts]
futaba-search = "futaba_search.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["futaba_search"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true